# skyguard

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/skyguard/: __init__.py
src/skyguard/io/: iq_loader.py
tests/: test_iq_loader.py  test_version.py
